# autobot

./: analyze.py  buildanalyses.py  builddf.py  buildmodel.py  client.py  fetchgames.py  project.py  pyproject.toml
