[tool.poetry]
name = "autobot"
version = "0.0.1"
description = ""
authors = ["Evin Sellin <evinism@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
berserk-downstream = "^0.11.7"
python-dotenv = "^0.19.2"
chess = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
